# gtest_trial

./: CMakeLists.txt  Main.cpp  mymath.cpp  mymath.hpp  tests.cpp
